<resources>
    <string name="app_name">PhychoMonitoring</string>
    <string name="action_settings">Settings</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="si_necesitas">Si necesitas contactar a un psicólogo contáctelo</string>
    <string name="AQUI">AQUÍ.</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Login">LOG IN</string>
    <string name="Registrar">REGISTRARSE</string>
    <string name="baseURL">http://phychomonitoringappapi-env.eba-ewmhpcqz.us-east-1.elasticbeanstalk.com/</string>
    <string name="baseURLMock">https://app-tp2-api.herokuapp.com/</string>
    <string name="Web">http://tp2-webclient.s3-website-us-east-1.amazonaws.com/#/</string>
    <string name="Token"></string>
</resources>
